Mass rename: Remove unnecessary 'manage' wording, replace outdated abbreviations

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -15,20 +15,20 @@ IDM MENU
 	POPUP "&File"
 	{
 		MENUITEM "&Remove Config File", IDM_FILE_REMOVECONFIG
-		MENUITEM "Edit &Settings...", IDM_FILE_SETTINGS
+		MENUITEM "&Settings...", IDM_FILE_SETTINGS
 		MENUITEM "&Exit", IDM_FILE_EXIT
 	}
 	POPUP "&Server"
 	{
-		MENUITEM "Edit &Servers...", IDM_SERVER_MANAGE
+		MENUITEM "&Servers...", IDM_SERVER_EDITSERVERS
 		MENUITEM "&Rotation...", IDM_SERVER_ROTATION
 		MENUITEM "&Banned IPs...", IDM_SERVER_BANNEDIPS
 	}
 	POPUP "&AutoKick"
 	{
 		MENUITEM "&Enable AutoKick", IDM_AUTOKICK_ENABLE
-		MENUITEM "&Set Maximum Ping...", IDM_AUTOKICK_SETPING
-		MENUITEM "Manage &AutoKick IDs/Names...", IDM_AUTOKICK_MANAGEIDS
+		MENUITEM "Set Maximum &Ping...", IDM_AUTOKICK_SETPING
+		MENUITEM "Edit AutoKick &IDs/Names...", IDM_AUTOKICK_EDITENTRIES
 	}
 	POPUP "&Help"
 	{
@@ -39,24 +39,23 @@ IDM MENU
 	}
 }
 
-// TODO: Remove meaningless "manage" from names
-IDD_MANAGESERVERS DIALOG 0, 0, 401, 269
+IDD_SERVERS DIALOG 0, 0, 401, 269
 STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Manage Servers"
+CAPTION "Servers"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Server Browser", IDC_STATIC, 7, 7, 191, 255
-    LISTBOX         IDC_DM_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    LISTBOX         IDC_SERVERS_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
     GROUPBOX        "Saved Servers", IDC_STATIC, 203, 7, 191, 238
-    LISTBOX         IDC_DM_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    LISTBOX         IDC_SERVERS_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
     LTEXT           "Address:", IDC_STATIC, 209, 196, 37, 8
-    CONTROL         "0.0.0.0", IDC_DM_IP, WC_IPADDRESS, WS_TABSTOP, 248, 194, 105, 12
-    EDITTEXT        IDC_DM_EDITPORT, 355, 194, 34, 12, ES_NUMBER, WS_EX_CLIENTEDGE
+    CONTROL         "0.0.0.0", IDC_SERVERS_EDITIP, WC_IPADDRESS, WS_TABSTOP, 248, 194, 105, 12
+    EDITTEXT        IDC_SERVERS_EDITPORT, 355, 194, 34, 12, ES_NUMBER, WS_EX_CLIENTEDGE
     LTEXT           "Password:", IDC_STATIC, 209, 213, 34, 8
-    EDITTEXT        IDC_DM_EDITPW, 248, 211, 141, 12, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
-    PUSHBUTTON      "&Add", IDC_DM_BUTTONADD, 220, 228, 50, 12
-    PUSHBUTTON      "&Overwrite", IDC_DM_BUTTONSAVE, 275, 228, 50, 12
-    PUSHBUTTON      "&Remove", IDC_DM_BUTTONREMOVE, 330, 228, 50, 12
+    EDITTEXT        IDC_SERVERS_EDITPW, 248, 211, 141, 12, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
+    PUSHBUTTON      "&Add", IDC_SERVERS_BUTTONADD, 220, 228, 50, 12
+    PUSHBUTTON      "&Overwrite", IDC_SERVERS_BUTTONSAVE, 275, 228, 50, 12
+    PUSHBUTTON      "&Remove", IDC_SERVERS_BUTTONREMOVE, 330, 228, 50, 12
     DEFPUSHBUTTON   "&Close", IDCANCEL, 344, 250, 50, 12
 }
 
@@ -74,79 +73,79 @@ FONT 9, "Segoe UI"
     DEFPUSHBUTTON   "&Cancel", IDCANCEL, 117, 38, 50, 12
 }
 
-IDD_MANAGEIPS DIALOG 0, 0, 245, 236
+IDD_BANNEDIPS DIALOG 0, 0, 245, 236
 STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Manage Banned IPs"
+CAPTION "Banned IPs"
 FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_MIPS_LIST, 7, 7, 121, 222, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
-    CONTROL         "", IDC_MIPS_IPCONTROL, WC_IPADDRESS, WS_TABSTOP, 133, 105, 105, 12
-    PUSHBUTTON      "&Add", IDC_MIPS_BUTTONADD, 133, 119, 50, 12
-    PUSHBUTTON      "&Remove", IDC_MIPS_BUTTONREMOVE, 188, 119, 50, 12
+    LISTBOX         IDC_IPS_LIST, 7, 7, 121, 222, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    CONTROL         "", IDC_IPS_IPCONTROL, WC_IPADDRESS, WS_TABSTOP, 133, 105, 105, 12
+    PUSHBUTTON      "&Add", IDC_IPS_BUTTONADD, 133, 119, 50, 12
+    PUSHBUTTON      "&Remove", IDC_IPS_BUTTONREMOVE, 188, 119, 50, 12
     DEFPUSHBUTTON   "&Close", IDCANCEL, 188, 217, 50, 12, 0
 }
 
-IDD_MANAGEIDS DIALOG 0, 0, 338, 242
+IDD_AUTOKICK_ENTRIES DIALOG 0, 0, 338, 242
 STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Manage AutoKick IDs / Names"
+CAPTION "Edit AutoKick IDs / Names"
 FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_MIDS_LIST, 7, 7, 159, 228, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_LEFT
+    LISTBOX         IDC_AUTOKICK_LIST, 7, 7, 159, 228, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_LEFT
     GROUPBOX        "Auto-Kick Entry", IDC_STATIC, 171, 87, 160, 50
-    EDITTEXT        IDC_MIDS_EDIT, 177, 98, 149, 12, ES_AUTOHSCROLL
-    AUTORADIOBUTTON "DPLogin ID", IDC_MIDS_RADIOID, 177, 115, 76, 8
-    AUTORADIOBUTTON "Player name", IDC_MIDS_RADIONAME, 177, 125, 76, 8
-    PUSHBUTTON      "&Add", IDC_MIDS_BUTTONADD, 171, 142, 50, 12
-    PUSHBUTTON      "&Overwrite", IDC_MIDS_BUTTONOVERWRITE, 226, 142, 50, 12
-    PUSHBUTTON      "&Remove", IDC_MIDS_BUTTONREMOVE, 281, 142, 50, 12
+    EDITTEXT        IDC_AUTOKICK_EDIT, 177, 98, 149, 12, ES_AUTOHSCROLL
+    AUTORADIOBUTTON "DPLogin ID", IDC_AUTOKICK_RADIOID, 177, 115, 76, 8
+    AUTORADIOBUTTON "Player name", IDC_AUTOKICK_RADIONAME, 177, 125, 76, 8
+    PUSHBUTTON      "&Add", IDC_AUTOKICK_BUTTONADD, 171, 142, 50, 12
+    PUSHBUTTON      "&Overwrite", IDC_AUTOKICK_BUTTONOVERWRITE, 226, 142, 50, 12
+    PUSHBUTTON      "&Remove", IDC_AUTOKICK_BUTTONREMOVE, 281, 142, 50, 12
     DEFPUSHBUTTON   "&Close", IDCANCEL, 281, 223, 50, 12
 }
 
-IDD_MANAGEROTATION DIALOG 0, 0, 378, 270
+IDD_ROTATION DIALOG 0, 0, 378, 270
 STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Manage Rotation"
+CAPTION "Rotation"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Maplist", IDC_STATIC, 7, 7, 156, 256
-    LISTBOX         IDC_MROT_LIST, 14, 18, 143, 195, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
-    EDITTEXT        IDC_MROT_EDITMAP, 14, 215, 143, 12, ES_AUTOHSCROLL
-    PUSHBUTTON      "&Add", IDC_MROT_BUTTONADD, 31, 229, 50, 12
-    PUSHBUTTON      "&Remove", IDC_MROT_BUTTONREMOVE, 86, 229, 50, 12
-    PUSHBUTTON      "Remove all maps", IDC_MROT_BUTTONCLEAR, 41, 246, 85, 12
+    LISTBOX         IDC_ROTATION_LIST, 14, 18, 143, 195, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    EDITTEXT        IDC_ROTATION_EDITMAP, 14, 215, 143, 12, ES_AUTOHSCROLL
+    PUSHBUTTON      "&Add", IDC_ROTATION_BUTTONADD, 31, 229, 50, 12
+    PUSHBUTTON      "&Remove", IDC_ROTATION_BUTTONREMOVE, 86, 229, 50, 12
+    PUSHBUTTON      "Remove all maps", IDC_ROTATION_BUTTONCLEAR, 41, 246, 85, 12
     GROUPBOX        "Mapshot", IDC_STATIC, 172, 7, 199, 171
-    LTEXT           "", IDC_MROT_MAPSHOT, 178, 18, 187, 156
+    LTEXT           "", IDC_ROTATION_MAPSHOT, 178, 18, 187, 156
     GROUPBOX        "Rotation file", IDC_STATIC, 172, 185, 199, 45
-    EDITTEXT        IDC_MROT_EDITFILE, 178, 196, 187, 12, ES_AUTOHSCROLL
-    PUSHBUTTON      "&Save to file", IDC_MROT_BUTTONWRITE, 215, 210, 50, 12
-    PUSHBUTTON      "&Load from file", IDC_MROT_BUTTONREAD, 270, 210, 58, 12
+    EDITTEXT        IDC_ROTATION_EDITFILE, 178, 196, 187, 12, ES_AUTOHSCROLL
+    PUSHBUTTON      "&Save to file", IDC_ROTATION_BUTTONWRITE, 215, 210, 50, 12
+    PUSHBUTTON      "&Load from file", IDC_ROTATION_BUTTONREAD, 270, 210, 58, 12
     DEFPUSHBUTTON   "&Close", IDCANCEL, 321, 251, 50, 12
 }
 
-IDD_PROGRAMSETTINGS DIALOG 0, 0, 280, 191
+IDD_SETTINGS DIALOG 0, 0, 280, 191
 STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Rconpanel - Settings"
+CAPTION "Settings"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Network", IDC_STATIC, 7, 7, 266, 27
     LTEXT           "Time to wait for your servers to respond:", IDC_STATIC, 13, 18, 135, 8
-    EDITTEXT        IDC_PS_EDITTIMEOUTOWNSERVERS, 184, 16, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_SETTINGS_EDITTIMEOUTOWNSERVERS, 184, 16, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "milliseconds", IDC_STATIC, 227, 18, 44, 8
     GROUPBOX        "Intervals", IDC_STATIC, 7, 39, 266, 46
     LTEXT           "Checking interval for AutoKick (if active):", IDC_STATIC, 13, 50, 180, 8
-    EDITTEXT        IDC_PS_EDITAUTOKICKINTERVAL, 196, 49, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_SETTINGS_EDITAUTOKICKINTERVAL, 196, 49, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "seconds", IDC_STATIC, 239, 50, 32, 8
     LTEXT           "Automatically refresh players after (0 = disabled):", IDC_STATIC, 13, 69, 180, 8
-    EDITTEXT        IDC_PS_EDITAUTORELOAD, 196, 68, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_SETTINGS_EDITAUTORELOAD, 196, 68, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "seconds", IDC_STATIC, 239, 69, 32, 8
     GROUPBOX        "Other settings", IDC_STATIC, 7, 90, 266, 77
-    AUTOCHECKBOX    "Limit console line count to:", IDC_PS_CHECKLINECOUNT, 14, 102, 111, 8
-    EDITTEXT        IDC_PS_EDITLINECOUNT, 127, 100, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
+    AUTOCHECKBOX    "Limit console line count to:", IDC_SETTINGS_CHECKLINECOUNT, 14, 102, 111, 8
+    EDITTEXT        IDC_SETTINGS_EDITLINECOUNT, 127, 100, 38, 12, ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "lines", IDC_STATIC, 170, 102, 28, 8
-    AUTOCHECKBOX    "Color the row backgrounds in the player's team colors.", IDC_PS_CHECKCOLORPLAYERS, 14, 118, 253, 8
-    AUTOCHECKBOX    "Color the pings from green to red", IDC_PS_CHECKCOLORPINGS, 14, 134, 253, 8
-    AUTOCHECKBOX    "Don't show the lower part of the GUI (manual rcon)", IDC_PS_CHECKDISABLECONSOLE, 14, 150, 253, 8
+    AUTOCHECKBOX    "Color the row backgrounds in the player's team colors.", IDC_SETTINGS_CHECKCOLORPLAYERS, 14, 118, 253, 8
+    AUTOCHECKBOX    "Color the pings from green to red", IDC_SETTINGS_CHECKCOLORPINGS, 14, 134, 253, 8
+    AUTOCHECKBOX    "Don't show the lower part of the GUI (manual rcon)", IDC_SETTINGS_CHECKDISABLECONSOLE, 14, 150, 253, 8
     PUSHBUTTON      "Cancel", IDCANCEL, 168, 172, 50, 12
-    DEFPUSHBUTTON   "OK", IDC_PS_BUTTONOK, 223, 172, 50, 12
+    DEFPUSHBUTTON   "OK", IDC_SETTINGS_BUTTONOK, 223, 172, 50, 12
 }
 
 // Text is set in OnRCONCommandsInitDialog because the microsoft .rc compiler truncates text here.
