--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -107,7 +107,7 @@ CAPTION "Rotation"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Maplist", IDC_STATIC, 7, 7, 156, 256
-    LISTBOX         IDC_ROTATION_LIST, 14, 18, 143, 195, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    LISTBOX         IDC_ROTATION_LIST, 14, 18, 143, 195, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
     EDITTEXT        IDC_ROTATION_EDITMAP, 14, 215, 143, 12, ES_AUTOHSCROLL
     PUSHBUTTON      "&Add", IDC_ROTATION_BUTTONADD, 31, 229, 50, 12
     PUSHBUTTON      "&Remove", IDC_ROTATION_BUTTONREMOVE, 86, 229, 50, 12
@@ -118,7 +118,7 @@ FONT 9, "Segoe UI"
     EDITTEXT        IDC_ROTATION_EDITFILE, 178, 190, 187, 12, ES_AUTOHSCROLL
     PUSHBUTTON      "&Save to file", IDC_ROTATION_BUTTONWRITE, 215, 204, 50, 12
     PUSHBUTTON      "&Load from file", IDC_ROTATION_BUTTONREAD, 270, 204, 58, 12
-    DEFPUSHBUTTON   "&Close", IDCANCEL, 321, 251, 50, 12
+    PUSHBUTTON      "&Close", IDCANCEL, 321, 251, 50, 12
 }
 
 IDD_SETTINGS DIALOG 0, 0, 280, 191
