Re-Layout autokick dialog

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -90,15 +90,15 @@ STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPU
 CAPTION "Edit AutoKick IDs / Names"
 FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_AUTOKICK_LIST, 7, 7, 159, 228, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_LEFT
-    GROUPBOX        "Auto-Kick Entry", IDC_STATIC, 171, 87, 160, 50
+    LISTBOX         IDC_AUTOKICK_LIST, 7, 7, 159, 212, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
+    GROUPBOX        "Auto-Kick Entry", IDC_STATIC, 171, 87, 160, 68
     EDITTEXT        IDC_AUTOKICK_EDIT, 177, 98, 149, 12, ES_AUTOHSCROLL
-    AUTORADIOBUTTON "DPLogin ID", IDC_AUTOKICK_RADIOID, 177, 115, 76, 8
-    AUTORADIOBUTTON "Player name", IDC_AUTOKICK_RADIONAME, 177, 125, 76, 8
-    PUSHBUTTON      "&Add", IDC_AUTOKICK_BUTTONADD, 171, 142, 50, 12
-    PUSHBUTTON      "&Overwrite", IDC_AUTOKICK_BUTTONOVERWRITE, 226, 142, 50, 12
-    PUSHBUTTON      "&Remove", IDC_AUTOKICK_BUTTONREMOVE, 281, 142, 50, 12
-    DEFPUSHBUTTON   "&Close", IDCANCEL, 281, 223, 50, 12
+    AUTORADIOBUTTON "DPLogin ID", IDC_AUTOKICK_RADIOID, 177, 115, 149, 8
+    AUTORADIOBUTTON "Player name", IDC_AUTOKICK_RADIONAME, 177, 125, 149, 8
+    PUSHBUTTON      "&Add", IDC_AUTOKICK_BUTTONADD, 198, 138, 50, 12
+    PUSHBUTTON      "&Overwrite", IDC_AUTOKICK_BUTTONOVERWRITE, 253, 138, 50, 12
+    PUSHBUTTON      "&Remove", IDC_AUTOKICK_BUTTONREMOVE, 62, 223, 50, 12
+    PUSHBUTTON      "&Close", IDCANCEL, 281, 223, 50, 12
 }
 
 IDD_ROTATION DIALOG 0, 0, 378, 270
