Autokick, banned ips, servers dialogs: allow deleting with delete key

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -45,18 +45,18 @@ CAPTION "Servers"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Server Browser", IDC_STATIC, 7, 7, 191, 255
-    LISTBOX         IDC_SERVERS_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    LISTBOX         IDC_SERVERS_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
     GROUPBOX        "Saved Servers", IDC_STATIC, 203, 7, 191, 238
-    LISTBOX         IDC_SERVERS_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    LISTBOX         IDC_SERVERS_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
     LTEXT           "Address:", IDC_STATIC, 209, 196, 37, 8
     CONTROL         "0.0.0.0", IDC_SERVERS_EDITIP, WC_IPADDRESS, WS_TABSTOP, 248, 194, 105, 12
-    EDITTEXT        IDC_SERVERS_EDITPORT, 355, 194, 34, 12, ES_NUMBER, WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_SERVERS_EDITPORT, 355, 194, 34, 12, ES_NUMBER
     LTEXT           "Password:", IDC_STATIC, 209, 213, 34, 8
-    EDITTEXT        IDC_SERVERS_EDITPW, 248, 211, 141, 12, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_SERVERS_EDITPW, 248, 211, 141, 12, ES_AUTOHSCROLL | ES_PASSWORD
     PUSHBUTTON      "&Add", IDC_SERVERS_BUTTONADD, 220, 228, 50, 12
     PUSHBUTTON      "&Overwrite", IDC_SERVERS_BUTTONSAVE, 275, 228, 50, 12
     PUSHBUTTON      "&Remove", IDC_SERVERS_BUTTONREMOVE, 330, 228, 50, 12
-    DEFPUSHBUTTON   "&Close", IDCANCEL, 344, 250, 50, 12
+    PUSHBUTTON      "&Close", IDCANCEL, 344, 250, 50, 12
 }
 
 IDD_FORCEJOIN DIALOG 0, 0, 174, 57
@@ -78,11 +78,11 @@ STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPU
 CAPTION "Banned IPs"
 FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_IPS_LIST, 7, 7, 121, 222, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    LISTBOX         IDC_IPS_LIST, 7, 7, 121, 222, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
     CONTROL         "", IDC_IPS_IPCONTROL, WC_IPADDRESS, WS_TABSTOP, 133, 105, 105, 12
     PUSHBUTTON      "&Add", IDC_IPS_BUTTONADD, 133, 119, 50, 12
     PUSHBUTTON      "&Remove", IDC_IPS_BUTTONREMOVE, 188, 119, 50, 12
-    DEFPUSHBUTTON   "&Close", IDCANCEL, 188, 217, 50, 12, 0
+    PUSHBUTTON      "&Close", IDCANCEL, 188, 217, 50, 12, 0
 }
 
 IDD_AUTOKICK_ENTRIES DIALOG 0, 0, 338, 242
