Servers dialog: Better add flow

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -45,7 +45,7 @@ CAPTION "Servers"
 FONT 9, "Segoe UI"
 {
     GROUPBOX        "Server Browser", IDC_STATIC, 7, 7, 191, 255
-    LISTBOX         IDC_SERVERS_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    LISTBOX         IDC_SERVERS_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
     GROUPBOX        "Saved Servers", IDC_STATIC, 203, 7, 191, 238
     LISTBOX         IDC_SERVERS_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY | LBS_WANTKEYBOARDINPUT
     LTEXT           "Address:", IDC_STATIC, 209, 196, 37, 8
