--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -6,7 +6,6 @@
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDA_APP_ICON		ICON		"console.ico"
-1					RT_MANIFEST	"common-controls-6.manifest"
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
@@ -168,6 +167,21 @@ FONT 9, "Segoe UI"
     LTEXT           "milliseconds", IDC_STATIC, 86, 26, 46, 8
     PUSHBUTTON      "&Cancel", IDCANCEL, 34, 46, 50, 12
     DEFPUSHBUTTON   "&OK", IDC_SP_BUTTONOK, 89, 46, 50, 12
+}
+
+// Used to translate dialog units to pixels (using MapDialogRect)
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDD_DUMMY DIALOG 0, 0, 223, 70
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE
+FONT 9, "Segoe UI"
+{
+    COMBOBOX        IDC_DUMMY_COMBOBOX, 7, 7, 50, 12, CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
+    PUSHBUTTON      "Button", IDC_DUMMY_BUTTON, 62, 7, 50, 12, 0, WS_EX_LEFT
+    EDITTEXT        IDC_DUMMY_EDIT, 117, 7, 48, 12, ES_AUTOHSCROLL, WS_EX_LEFT
+    LTEXT           "Label", IDC_DUMMY_STATIC, 170, 9, 46, 8, SS_LEFT, WS_EX_LEFT
+    PUSHBUTTON      "Button", IDC_DUMMY_BUTTON_PADDINGLARGE, 62, 24, 50, 12, 0, WS_EX_LEFT
+    PUSHBUTTON      "Button", IDC_DUMMY_BUTTON_PADDINGSMALL, 62, 21, 50, 12, 0, WS_EX_LEFT
+    PUSHBUTTON      "Button", IDC_DUMMY_BUTTON_PADDINGTINY, 62, 20, 50, 12, 0, WS_EX_LEFT
 }
 
 VS_VERSION_INFO VERSIONINFO
