Rewrite resize logic with DPI changes in mind

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -171,10 +171,10 @@ FONT 9, "Segoe UI"
 // Used to translate dialog units to pixels (using MapDialogRect)
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_DUMMY DIALOG 0, 0, 223, 70
-STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION
 FONT 9, "Segoe UI"
 {
-    COMBOBOX        IDC_DUMMY_COMBOBOX, 7, 7, 50, 12, CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
+    COMBOBOX        IDC_DUMMY_COMBOBOX, 7, 7, 50, 50, CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
     PUSHBUTTON      "Button", IDC_DUMMY_BUTTON, 62, 7, 50, 12, 0, WS_EX_LEFT
     EDITTEXT        IDC_DUMMY_EDIT, 117, 7, 48, 12, ES_AUTOHSCROLL, WS_EX_LEFT
     LTEXT           "Label", IDC_DUMMY_STATIC, 170, 9, 46, 8, SS_LEFT, WS_EX_LEFT
